--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="javascripts/constants.js"></script>
     <script src="javascripts/utils.js"></script>
+    <script src="javascripts/Sensor.js"></script>
     <script src="javascripts/Road.js"></script>
     <script src="javascripts/Controls.js"></script>
     <script src="javascripts/Car.js"></script>
